<resources>
    <string name="app_name">Ruthie Floats App Portfolio</string>
    <string name="my_apps">My Nanodegree Apps!</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
    <string name="start_toast">This is where my&#160;</string>
    <string name="end_toast">&#160; app will go!</string>
</resources>